--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -1,7 +1,6 @@
-<h1>All The Guests</h1>
-
+<h1>Guests in this episode</h1>
 <ul>
-  <% @guests.each do |guest| %>
+  <% @episode.guest.each do |guest| %>
     <li><%= link_to "#{guest.name}", :action => 'show', :id => guest.id%></li>
   <% end %>
 </ul>
